# operator

./: .gitignore  AMENDMENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  PRINCIPLES.md  README.md  SLACK_CHANNEL_SPEC.md  SPEC.md  TASKS.md  pyproject.toml
.github/workflows/: publish.yml
src/operator_agent/: __init__.py  cli.py  config.py  core.py
src/operator_agent/providers/: __init__.py  claude.py  codex.py  gemini.py
src/operator_agent/transports/: __init__.py  telegram.py
src/operator_ai/: __main__.py  agent.py  agent_runtime.py  agents.py  cli.py  commands.py  config.py  context.py  frontmatter.py  job_specs.py  jobs.py  layout.py  litellm_logging.py  log_context.py  main.py  memory.py  memory_index.py  memory_reindex.py  message_timestamps.py  messages.py  request_context.py  run_prompt.py  skills.py  status.py  store.py  system_events.py  truncation.py  user_ops.py  utils.py
src/operator_ai/agent/: __init__.py  info.py  loop.py  runtime.py
src/operator_ai/bundled_skills/job-creator/: SKILL.md
src/operator_ai/bundled_skills/skill-creator/: SKILL.md
src/operator_ai/bundled_skills/skill-creator/references/: frontmatter-reference.md
src/operator_ai/cli/: __init__.py  common.py  init.py  jobs.py  memory.py  service.py  users.py
src/operator_ai/job/: __init__.py  runner.py  spec.py
src/operator_ai/main/: __init__.py  attachments.py  dispatcher.py  runtime.py  startup.py
src/operator_ai/memory/: __init__.py  index.py  reindex.py  store.py
src/operator_ai/prompts/: __init__.py  agent.md  cleaner.md  harvester.md  job.md  subagent.md  system.md
src/operator_ai/tools/: __init__.py  context.py  files.py  jobs.py  memory.py  messaging.py  registry.py  shell.py  skills.py  skills_access.py  state.py  subagent.py  users.py  web.py  workspace.py
src/operator_ai/transport/: base.py  cli.py  registry.py  slack.py
src/operator_ai/transport/slack/: __init__.py  api.py  config.py  formatting.py  mentions.py  tools.py  transport.py
tests/: conftest.py  simulate_message.py  test_agent.py  test_agents.py  test_auth.py  test_cli_init.py  test_cli_user.py  test_config.py  test_context.py  test_context_prepare.py  test_file_paths.py  test_file_support.py  test_integration.py  test_job_model.py  test_job_specs.py  test_jobs.py  test_layout.py  test_memory.py  test_memory_index.py  test_message_timestamps.py  test_messages.py  test_prompts.py  test_request_context.py  test_runtime.py  test_runtime_cancel.py  test_sandbox.py  test_skills.py  test_skills_access.py  test_store.py  test_subagent.py  test_tools.py  test_transport.py  test_users_tool.py
