[project]
name = "operator-agent"
version = "0.4.0"
description = "Personal AI agent that bridges Telegram to CLI agents (Claude, Codex, Gemini) running on your machine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Gavin Vickery", email = "gavin@geekforbrains.com" }]
keywords = ["ai", "agent", "telegram", "claude", "codex", "gemini", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["typer>=0.12", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/geekforbrains/operator"
Repository = "https://github.com/geekforbrains/operator"
Changelog = "https://github.com/geekforbrains/operator/blob/main/CHANGELOG.md"
Issues = "https://github.com/geekforbrains/operator/issues"

[project.optional-dependencies]
telegram = ["python-telegram-bot>=22.6"]
dev = ["ruff>=0.15.0"]

[project.scripts]
operator = "operator_agent.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
operator_agent = ["system_prompt.md"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["operator_agent"]
